logs/redturtle.custommenu.factories.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redturtle'...
Listing './lib/python3.5/site-packages/redturtle/custommenu'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/Extensions'...
Compiling './lib/python3.5/site-packages/redturtle/custommenu/factories/Extensions/install.py'...
***   File "./lib/python3.5/site-packages/redturtle/custommenu/factories/Extensions/install.py", line 30
    print 'Removing customization of the "Add new..." menu at %s' % x.getPath()
                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/adapters'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/browser'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/exportimport'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/locales'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/locales/it'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/profiles'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/profiles/default'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/profiles/uninstall'...
Listing './lib/python3.5/site-packages/redturtle/custommenu/factories/tests'...
Listing './lib/python3.5/site-packages/redturtle.custommenu.factories-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
